[package]
name = "digital-garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.3"
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
directories = "5.0.1"
edit = "0.1.5"

[dev-dependencies]
assert_cmd = "2.0.14"
